After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 702999 - undefined reference to `wl_buffer_is_shm'
undefined reference to `wl_buffer_is_shm'
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: Wayland
unspecified
Other All
: Normal critical
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-06-24 18:17 UTC by U. Artie Eoff
Modified: 2013-07-03 13:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description U. Artie Eoff 2013-06-24 18:17:04 UTC
Cogl fails to compile with Wayland "master"


../../cogl/.libs/libcogl.so: undefined reference to `wl_buffer_is_shm'
collect2: error: ld returned 1 exit status


http://cgit.freedesktop.org/wayland/wayland/commit/?id=3af748b872f8f1ac4ce536b9826cc7ecbe74df6a removed wl_buffer_is_shm()

wayland (master) heads/master-0-g3af748b
drm (master) heads/master-0-ga0178c0
mesa (master) heads/master-0-ge5bf19a
libxkbcommon (master) heads/master-0-g6f06eb5
pixman (master) heads/master-0-g279bdcd
cairo (master) heads/master-0-g4d94391
weston (master) heads/master-0-g6bd6294
cogl (cogl-1.16) heads/cogl-1.16-0-g29b01c2
Comment 1 Neil Roberts 2013-06-28 17:03:45 UTC
Thanks for the bug report. I've posted a patch to the mailing list which should address this issue. I'm just waiting for review.

http://lists.freedesktop.org/archives/cogl/2013-June/001284.html
Comment 2 Neil Roberts 2013-07-03 13:03:31 UTC
The patch is now in master and the 1.16 branch.

https://git.gnome.org/browse/cogl/commit/?id=9b35e1651ad0e46ed489893b60563e2c2